ajustes para integracao

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/node": "^10.9.4",
     "agentkeepalive": "^3.5.1",
     "async": "^2.6.1",
-    "azure-devops-node-api": "file:../../github/azure-devops-node-api/_build",
+    "azure-devops-node-api": "file:../azure-devops-node-api/_build",
+    "typed-rest-client": "file:../typed-rest-client",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
